[package]
description = "rspack_cacheable"
edition     = "2021"
license     = "MIT"
name        = "rspack_cacheable"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"

[features]
noop = []

[dependencies]
camino          = { workspace = true }
dashmap         = { workspace = true }
hashlink        = { workspace = true }
indexmap        = { workspace = true }
inventory       = { workspace = true }
json            = { workspace = true }
lightningcss    = { workspace = true }
once_cell       = { workspace = true }
rkyv            = { workspace = true }
rspack_macros   = { workspace = true }
rspack_resolver = { workspace = true }
rspack_sources  = { workspace = true }
serde_json      = { workspace = true }
smol_str        = { workspace = true }
swc_core        = { workspace = true, features = ["ecma_ast"] }
ustr            = { workspace = true }
xxhash-rust     = { workspace = true, features = ["const_xxh64"] }
