[package]
description       = "rspack_cacheable"
edition.workspace = true
license           = "MIT"
name              = "rspack_cacheable"
repository        = "https://github.com/web-infra-dev/rspack"
version.workspace = true

[features]
noop = []

[dependencies]
allocative              = { workspace = true, optional = true }
camino                  = { workspace = true }
dashmap                 = { workspace = true }
hashlink                = { workspace = true }
indexmap                = { workspace = true }
inventory               = { workspace = true }
json                    = { workspace = true }
lightningcss            = { workspace = true }
once_cell               = { workspace = true }
regex                   = { workspace = true }
rkyv                    = { workspace = true }
rspack_cacheable_macros = { workspace = true }
rspack_resolver         = { workspace = true }
rspack_sources          = { workspace = true }
serde_json              = { workspace = true }
smol_str                = { workspace = true }
sugar_path              = { workspace = true }
swc_core                = { workspace = true, features = ["ecma_ast"] }
ustr                    = { workspace = true }
xxhash-rust             = { workspace = true, features = ["const_xxh64"] }

[lints]
workspace = true
