
[package]
description       = "rspack cacheable macros"
edition.workspace = true
license           = "MIT"
name              = "rspack_cacheable_macros"
repository        = "https://github.com/web-infra-dev/rspack"
version.workspace = true
[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = [
  "full",
  "visit-mut",
  "derive",
  "parsing",
  "printing",
  "clone-impls",
  "proc-macro",
] }
