[package]
edition    = "2021"
license    = "MIT"
name       = "rspack_cacheable_test"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino           = { workspace = true }
dashmap          = { workspace = true }
json             = { workspace = true }
lightningcss     = { workspace = true }
once_cell        = { workspace = true }
rspack_cacheable = { path = "../rspack_cacheable" }
rspack_resolver  = { workspace = true }
rspack_sources   = { workspace = true }
rustc-hash       = { workspace = true }
serde_json       = { workspace = true }
swc_core         = { workspace = true, features = ["ecma_ast"] }
ustr             = { workspace = true }
