[package]
description             = "rspack collections"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license                 = "MIT"
name                    = "rspack_collections"
repository.workspace    = true
version.workspace       = true

[dependencies]
dashmap          = { workspace = true }
hashlink         = { workspace = true }
indexmap         = { workspace = true }
rayon            = { workspace = true }
rspack_cacheable = { workspace = true }
rustc-hash       = { workspace = true }
serde            = { workspace = true, features = ["derive"] }
ustr             = { workspace = true, features = ["serde"] }
