[package]
description             = "rspack collections"
documentation.workspace = true
edition.workspace       = true
homepage.workspace      = true
license                 = "MIT"
name                    = "rspack_collections"
repository.workspace    = true
version.workspace       = true

[dependencies]
allocative       = { workspace = true, optional = true }
dashmap          = { workspace = true }
hashlink         = { workspace = true }
indexmap         = { workspace = true }
rayon            = { workspace = true }
rspack_cacheable = { workspace = true }
serde            = { workspace = true, features = ["derive"] }
ustr             = { workspace = true, features = ["serde"] }

[lints]
workspace = true
