[package]
description = "rspack core"
edition     = "2021"
license     = "MIT"
name        = "rspack_core"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.1.0"
[dependencies]
anymap = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
cow-utils = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
derivative = { workspace = true }
dyn-clone = "1.0.17"
either = { workspace = true }
futures = { workspace = true }
futures-task = "0.3.31"
hashlink = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
indoc = { workspace = true }
itertools = { workspace = true }
json = { workspace = true }
mime_guess = { workspace = true }
num-bigint = "0.4.4"
once_cell = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rspack_ast = { version = "0.1.0", path = "../rspack_ast" }
rspack_collections = { version = "0.1.0", path = "../rspack_collections" }
rspack_error = { version = "0.1.0", path = "../rspack_error" }
rspack_fs = { version = "0.1.0", path = "../rspack_fs" }
rspack_futures = { version = "0.1.0", path = "../rspack_futures" }
rspack_hash = { version = "0.1.0", path = "../rspack_hash" }
rspack_hook = { version = "0.1.0", path = "../rspack_hook" }
rspack_loader_runner = { version = "0.1.0", path = "../rspack_loader_runner" }
rspack_macros = { version = "0.1.0", path = "../rspack_macros" }
rspack_paths = { version = "0.1.0", path = "../rspack_paths" }
rspack_regex = { version = "0.1.0", path = "../rspack_regex" }
rspack_resolver = { workspace = true }
rspack_sources = { workspace = true }
rspack_util = { version = "0.1.0", path = "../rspack_util" }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sugar_path = { workspace = true }
swc_core = { workspace = true, features = [
  "__ecma",
  "__visit",
  "__utils",
  "__ecma_transforms",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_quote",
  "swc_ecma_ast",
  "ecma_transforms_react",
  "ecma_transforms_module",
  "swc_ecma_codegen",
  "swc_ecma_visit",
] }
swc_node_comments = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }
tracing = { workspace = true }
url = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }

[lints]
workspace = true
