[package]
description = "rspack core"
edition     = "2021"
license     = "MIT"
name        = "rspack_core"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.2.0"
[dependencies]
anymap = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
cow-utils = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
derive_more = { workspace = true, features = ["debug"] }
dyn-clone = "1.0.17"
either = { workspace = true }
futures = { workspace = true }
hashlink = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true, features = ["rayon"] }
indoc = { workspace = true }
itertools = { workspace = true }
json = { workspace = true }
mime_guess = { workspace = true }
num-bigint = "0.4.6"
once_cell = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
ropey = { workspace = true }
rspack_ast = { workspace = true }
rspack_cacheable = { workspace = true }
rspack_collections = { workspace = true }
rspack_dojang = { workspace = true }
rspack_error = { workspace = true }
rspack_fs = { workspace = true }
rspack_futures = { workspace = true }
rspack_hash = { workspace = true }
rspack_hook = { workspace = true }
rspack_loader_runner = { workspace = true }
rspack_macros = { workspace = true }
rspack_paths = { workspace = true }
rspack_regex = { workspace = true }
rspack_resolver = { workspace = true }
rspack_sources = { workspace = true }
rspack_storage = { workspace = true }
rspack_util = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sugar_path = { workspace = true }
swc_core = { workspace = true, features = [
  "__ecma",
  "__visit",
  "__utils",
  "__ecma_transforms",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_quote",
  "common_concurrent",
  "swc_ecma_ast",
  "ecma_transforms_react",
  "ecma_transforms_module",
  "swc_ecma_codegen",
  "swc_ecma_visit",
] }
swc_node_comments = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
ustr = { workspace = true }

[dev-dependencies]
pretty_assertions = { version = "1.4.1" }

[lints]
workspace = true
